AM_CXXFLAGS = -I$(top_srcdir)/src $(BOOST_CPPFLAGS) @AM_CXXFLAGS@
  
# MessageLib library - noinstall shared library
noinst_LTLIBRARIES = libmessagelib.la
libmessagelib_la_SOURCES = \
	BuildingMessages.cpp \
	CommonMessages.cpp \
	CreatureMessages.cpp \
	FactoryCrateMessages.cpp \
	HarvesterMessages.cpp \
	IntangibleMessages.cpp \
	InternalMessages.cpp \
	ManSchematicMessages.cpp \
	MessageLib.cpp \
	MissionMessages.cpp \
	ObjControllerMessages.cpp \
	PlayerMessages.cpp \
	ResourceContainerMessages.cpp \
	StaticMessages.cpp \
	StructureMessages.cpp \
	SystemMessages.cpp \
	TangibleMessages.cpp
	
